# zvezdascenario

./: .gitignore  Cargo.toml  Dockerfile  fly.toml
docs/: index.html
docs/pkg/: euroleague_wasm.js  euroleague_wasm_bg.wasm
src/: lib.rs  main.rs  web.rs
static/: index.html
wasm/: Cargo.toml  index.html
wasm/src/: lib.rs
