[package]
name = "euroleague_scenarios"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = { version = "1.10", optional = true }
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }

[features]
default = ["server"]
server = ["rayon", "axum", "tokio", "tower-http"]

[[bin]]
name = "cli"
path = "src/main.rs"
required-features = ["server"]

[[bin]]
name = "web"
path = "src/web.rs"
required-features = ["server"]

[profile.release]
opt-level = 3
lto = true
